# tutor-ai-farmasi

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-deploy-ai-engine.yml  cd-deploy-webapp.yml  cd-preview-webapp.yml  ci-webapp.yml  ci.yml  dependency-review.yml  deploy-webapp.yml  preview-webapp.yml
ai_engine/: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
ai_engine/routes/: predict.py
ai_engine/services/: predictor.py
ai_train/: README.md  main.ipynb  predict.ipynb  pyproject.toml
ai_train/csv_dataset/: csv_cu_dataset.csv
ai_train/dataset/: README.md
ai_train/model/: cu_model.pkl
ai_train/utils/: helper.py
src/app/dashboard/: page.tsx
src/components/auth/: login-form.tsx  register-form.tsx
src/components/dashboard/: sign-out-button.tsx
src/components/ui/: button.tsx
src/lib/: auth.ts  error.ts  file-utils.ts
src/lib/auth/: auth-api-helper.ts  auth-page-helper.ts  auth.ts
src/repositories/: sample.repository.ts
src/services/: sample.service.ts
web_app/: .env.example  .gitignore  Dockerfile  README.md  netlify.toml  next.config.ts  package.json  pnpm-lock.yaml
web_app/.husky/: pre-commit
web_app/prisma/: schema.prisma
web_app/src/: proxy.ts
web_app/src/app/: layout.tsx
web_app/src/hooks/: use-samples.ts
web_app/src/lib/: api-handler.ts  file-utils.ts  jsend.ts  prisma.ts  supabase-server.ts
web_app/src/logger/: logger.ts
(+21 files in other folders)
